--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,10 @@ repositories {
 
 dependencies {
 
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    testImplementation 'org.testng:testng:7.1.0'
 
 }
 
 test {
-    useJUnitPlatform()
+    useTestNG()
 }
