--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,10 @@ repositories {
 
 dependencies {
 
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    testImplementation 'junit:junit:4.13'
 
 }
 
 test {
-    useJUnitPlatform()
+    useJUnit()
 }
